# charmbills

./: .gitignore  LICENSE  README.md
charmbills-backend/: .env.example  package-lock.json  package.json  tsconfig.json
charmbills-backend/src/: app-binary.b64  index.ts  runMintFlow.ts
charmbills-backend/src/api/: broadcast-package.ts  plans.ts  subscriptions.ts
charmbills-backend/src/charms/: buildMintNFT.ts  buildMintToken.ts  proverClient.ts
charmbills-backend/src/charms/spellTemplates/: mint-nft.yaml
charmbills-frontend/: package-lock.json  package.json  tree.bat  tsconfig.json
charmbills-frontend/app/: globals.css  layout.tsx  page.tsx
charmbills-frontend/app/dashboard/: page.tsx
charmbills-frontend/app/subscribe/: page.tsx
charmbills-frontend/components/: Untitled  asset-card.tsx  navigation.tsx  subscription-form.tsx  subscription-table.tsx
charmbills-frontend/lib/: WalletContext.tsx  charms-utils.ts  types.ts
charmbills-frontend/lib/hooks/: useLeatherWallet.ts
charmbills-frontend/lib/wasm/: charms_lib.js
docs/: API_DOCUMENTATION.md  ARCHITECTURE.html  DATABASE_INTEGRATION_SUMMARY.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  GOOGLE_NOTEBOOK_LM.md  IMPLEMENTATION_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  WASM_BUILD_INSTRUCTIONS.md
shared/: constants.ts  types.ts
subscription-engine/: Cargo.toml  README.md
subscription-engine/spells/: mint-nft.yaml  mint-token.yaml
subscription-engine/src/: lib.rs  main.rs
