[package]
name = "subscription-engine"
description = "A simple Charms app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
charms-sdk = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sha2 = { version = "0.10.9" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
